bobcat (2.15.00) ISN

  * Re-implemented FnWrap: its size has been halved, FnWrap::unary and
    FnWrap::binary act identically and are now in fact superseded by the
    function  FBB::context().



bobcat (2.14.00)

  * New class: Cidr verifying whether an IP4 address belongs to an IP4
    Classless Inter-Domain Routing (CIDR) address block.

  * New class: StringLine doing line instead of word extraction with
    operator>>.

  * Repaired bug in ConfigLine detected by Kees Visser on amd64 architectures
    causing string to throw an exeption with empty configuration file lines

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 05 Feb 2011 12:02:08 +0100

bobcat (2.13.00)

  * Repaired bug in Arg detected by George Danchev sometimes causing segfaults
    when an undefined long option is specified.

  * This line added after tagging, but part of 2.13.00: using
    std::unordered_map instead of std::map with Arg.

  * Moved public MailHeaders::const_hdr_iterator members from mailheaders.ih
    back to mailheaders

  * Cosmetic corrections to man-pages

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 02 Feb 2011 18:39:50 +0100

bobcat (2.12.00)

  * FreeBSD flavors lack the fntl flag F_DUPFD_CLOEXEC, so Process::operator|
    must use a work-around for that flag. The work-around is compiled into
    Process objects/code when the BOBCAT_DIY_CLOEXEC_ identifier has been
    defined. It is defined by default in process/process when the identifiers 
    __FreeBSD_kernel__ or __FreeBSD__ are defined.
    As F_DUPFD_CLOEXEC has been defined by POSIX since 2008 it is possible
    that it will soon be defined by FreeBSD systems as well. The work-around
    adds an additional data member to the Process class. Since the data member
    is the last data member of Process objects it can easily be removed at a
    later stage when F_DUPFD_CLOEXEX becomes available for FreeBSD systems.

  * Lacking descriptions of some FBB::CGI members were added to the 
    cgi(3bobcat) man-page.
