@@ -89,6 +89,7 @@ void install(string rss, string dev)
             "README.milter "
             "README.optimization "
             "README.process-pipe "
+            "README.fnwrap "
             "process-pipe.odp "
             "process-pipe.pdf "
             "TODO");
