@@ -4,6 +4,8 @@ bobcat (2.15.00) ISN
     FnWrap::binary act identically and are now in fact superseded by the
     function  FBB::context().
 
+  * Added README.fnwrap to the set of README files, explaining the FnWrap's 
+    inner workings
 
 
 bobcat (2.14.00)
